--- a/mermaid-headless-chrome/package.json
+++ b/mermaid-headless-chrome/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0"
+    "chrome-aws-lambda": "^10.1.0",
+    "playwright-chromium": "^1.21.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.95",
-    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
     "esbuild": "^0.14.38",
-    "playwright-chromium": "^1.21.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
