--- a/rehype-mermaid-svg/package.json
+++ b/rehype-mermaid-svg/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "exports": "./index.ts",
   "scripts": {
     "local": "tsx local.ts"
   },
