--- a/rehype-mermaid-svg/package.json
+++ b/rehype-mermaid-svg/package.json
@@ -5,32 +5,30 @@
   "type": "module",
   "exports": "./index.ts",
   "scripts": {
-    "local": "tsx local.ts"
+    "local": "tsx local.ts",
+    "build": "esbuild index.ts --bundle  --outfile=index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "typescript": "^4.7.4"
+    "@types/hast": "^2.3.4",
+    "typescript": "^4.7.4",
+    "rehype-parse": "^8.0.4",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0"
   },
   "dependencies": {
-    "@types/hast": "^2.3.4",
     "@web-std/fetch": "^4.1.0",
     "hast-util-from-parse5": "^7.1.0",
     "hast-util-is-element": "^2.1.2",
     "hast-util-select": "^5.0.2",
-    "mdast": "^3.0.0",
-    "node-fetch": "^3.2.6",
     "parse5": "^7.0.0",
-    "rehype-parse": "^8.0.4",
-    "rehype-stringify": "^9.0.3",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
     "tsx": "^3.6.0",
     "unified": "^10.1.2",
     "unist-util-is": "^5.1.1",
-    "unist-util-select": "^4.0.1",
     "unist-util-visit": "^4.1.0"
   }
 }
