--- a/rehype-mermaid-svg/package.json
+++ b/rehype-mermaid-svg/package.json
@@ -6,7 +6,7 @@
   "exports": "./index.js",
   "scripts": {
     "local": "tsx local.ts",
-    "build": "esbuild index.ts --bundle  --outfile=index.js"
+    "build": "esbuild plugin.ts --bundle --outfile=index.js"
   },
   "keywords": [],
   "author": "",
