--- a/rehype-mermaid-svg/package.json
+++ b/rehype-mermaid-svg/package.json
@@ -6,25 +6,25 @@
   "exports": "./index.js",
   "scripts": {
     "local": "tsx local.ts",
-    "build": "esbuild plugin.ts --bundle --outfile=index.js"
+    "build": "esbuild plugin.ts --bundle --format=esm --platform=node --target=node16 --outfile=index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.0.0",
     "@types/hast": "^2.3.4",
-    "typescript": "^4.7.4",
+    "@types/node": "^18.0.0",
     "rehype-parse": "^8.0.4",
     "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0"
+    "remark-rehype": "^10.1.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@web-std/fetch": "^4.1.0",
     "hast-util-from-parse5": "^7.1.0",
     "hast-util-is-element": "^2.1.2",
     "hast-util-select": "^5.0.2",
+    "node-fetch": "^3.2.6",
     "parse5": "^7.0.0",
     "tsx": "^3.6.0",
     "unified": "^10.1.2",
